--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
     <div class="container">
         <div class="spinner"></div>
         <h1>Aplikasi Digisys Sedang Maintenance</h1>
-        <p>Mohon maaf atas ketidaknyamanannya. Kami sedang melakukan pemeliharaan sistem.</p>
+        <p>Mohon maaf atas ketidaknyamanannya.</p>
+        <p>Kami sedang melakukan pemeliharaan sistem.</p>
         <p>Silakan kembali lagi beberapa saat lagi.</p>
     </div>
 </body>
