--- a/index.html
+++ b/index.html
@@ -50,10 +50,9 @@
 <body>
     <div class="container">
         <div class="spinner"></div>
-        <h1>Aplikasi Digisys Sedang Maintenance</h1>
+        <h1>Sistem Digisys Sedang Maintenance</h1>
         <p>Mohon maaf atas ketidaknyamanannya.</p><br>
         <p>Kami sedang melakukan pemeliharaan sistem.</p>
-        <p>Silakan kembali lagi beberapa saat lagi.</p>
     </div>
 </body>
 </html>
